<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.e_market.ui.views.ui.HomeFragment"
        android:label="@string/title_e_market"
        tools:layout="@layout/fragment_home">
    <action
        android:id="@+id/action_navigation_home_to_navigation_product_detail"
        app:destination="@id/navigation_product_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_product_detail"
        android:name="com.e_market.ui.views.ui.ProductDetailFragment"
        android:label="@string/title_product_detail"
        tools:layout="@layout/fragment_product_detail" />
    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.e_market.ui.views.ui.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.e_market.ui.views.ui.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />


</navigation>