<?xml version="1.0" encoding="utf-8"?>
<HorizontalScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.views.ui.ProductDetailFragment">
    <ScrollView android:id="@+id/iphone_14___1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent" >

        <RelativeLayout android:id="@+id/content_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >



            <RelativeLayout android:id="@+id/page_iphone_14___1_ek1"
                android:layout_marginTop="0dp"
                android:layout_marginStart="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <View   android:id="@+id/_bg__iphone_14___1_ek2"
                    android:background="@drawable/_bg__iphone_14___1_ek2_shape"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_width="390dp"
                    android:layout_height="844dp" />


                <RelativeLayout android:id="@+id/frame_1595"
                    android:layout_marginTop="0dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/_bg__frame_1595_ek1"
                        android:background="@drawable/_bg__frame_1595_ek1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="390dp"
                        android:layout_height="50dp" />

                    <TextView android:id="@+id/icons"
                        android:textStyle="bold"
                        android:textSize="24sp"
                        android:textColor="@color/_bg__iphone_14___1_ek2_color"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="6dp"
                        android:layout_width="19.4dp"
                        android:layout_height="36.4dp"
                        android:text="@string/icons_string"
                        />

                </RelativeLayout>

                <View   android:id="@+id/rectangle_1"
                    android:background="@drawable/rectangle_1_shape"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="66dp"
                    android:layout_width="359dp"
                    android:layout_height="225dp" />

                <TextView android:id="@+id/apple_iphone_14_pro_max_256_gb"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/apple_iphone_14_pro_max_256_gb_color"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="307dp"
                    android:layout_width="355dp"
                    android:layout_height="30dp"
                    android:text="@string/apple_iphone_14_pro_max_256_gb_string"
                    />

                <TextView android:id="@+id/lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__vivamus_sodales_nibh_pretium_ipsum_faucibus__a_commodo_tortor_blandit__duis_pellentesque__purus_sed_gravida_sagittis__tortor_urna_eleifend_ante__a_volutpat_ex_est_vel_ipsum__etiam_in_auctor_nisi__donec_in_mattis_enim__in_bibendum_lorem__nam_vitae_semper_quam_"
                    android:textSize="14sp"
                    android:textColor="@color/apple_iphone_14_pro_max_256_gb_color"
                    android:layout_marginLeft="14dp"
                    android:layout_marginTop="347dp"
                    android:layout_width="365.4dp"
                    android:layout_height="124.4dp"
                    android:text="@string/lorem_ipsum_dolor_sit_amet__consectetur_adipiscing_elit__vivamus_sodales_nibh_pretium_ipsum_faucibus__a_commodo_tortor_blandit__duis_pellentesque__purus_sed_gravida_sagittis__tortor_urna_eleifend_ante__a_volutpat_ex_est_vel_ipsum__etiam_in_auctor_nisi__donec_in_mattis_enim__in_bibendum_lorem__nam_vitae_semper_quam__string"
                    />

                <ImageView android:id="@+id/star_1"
                    android:src="@drawable/star_1"
                    android:contentDescription="star_1"
                    android:layout_marginStart="342dp"
                    android:layout_marginTop="76dp"
                    android:layout_width="22.83dp"
                    android:layout_height="21.71dp" />


                <RelativeLayout android:id="@+id/bottomtab"
                    android:layout_marginTop="784dp"
                    android:layout_marginStart="0dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/_bg__bottomtab_ek1"
                        android:background="@drawable/_bg__bottomtab_ek1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="390dp"
                        android:layout_height="60dp" />


                    <RelativeLayout android:id="@+id/____icon__home_outline_"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="16dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <View   android:id="@+id/_bg______icon__home_outline__ek1"
                            android:background="@drawable/_bg______icon__home_outline__ek1_shape"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_width="32.31dp"
                            android:layout_height="30dp" />


                        <RelativeLayout android:id="@+id/group"
                            android:layout_marginTop="0dp"
                            android:layout_marginStart="0dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >

                            <View   android:id="@+id/_bg__group_ek1"
                                android:background="@drawable/_bg__group_ek1_shape"
                                android:layout_marginStart="0dp"
                                android:layout_marginTop="0dp"
                                android:layout_width="32.31dp"
                                android:layout_height="30dp" />

                            <ImageView android:id="@+id/vector"
                                android:src="@drawable/vector"
                                android:contentDescription="vector"
                                android:layout_marginStart="1dp"
                                android:layout_marginTop="10dp"
                                android:layout_width="27.39dp"
                                android:layout_height="20.17dp" />

                            <ImageView android:id="@+id/vector_ek1"
                                android:src="@drawable/vector_ek1"
                                android:contentDescription="vector_ek1"
                                android:layout_marginStart="-2dp"
                                android:layout_marginTop="-2dp"
                                android:layout_width="34.31dp"
                                android:layout_height="17dp" />

                            <ImageView android:id="@+id/vector_ek2"
                                android:src="@drawable/vector_ek2"
                                android:contentDescription="vector_ek2"
                                android:layout_marginStart="21dp"
                                android:layout_marginTop="-1dp"
                                android:layout_width="5.46dp"
                                android:layout_height="10.29dp" />

                        </RelativeLayout>

                    </RelativeLayout>


                    <RelativeLayout android:id="@+id/____icon__basket_outline_"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="125.31dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <View   android:id="@+id/_bg______icon__basket_outline__ek1"
                            android:background="@drawable/_bg______icon__basket_outline__ek1_shape"
                            android:layout_marginStart="-125dp"
                            android:layout_marginTop="-10dp"
                            android:layout_width="34.15dp"
                            android:layout_height="30dp" />


                        <RelativeLayout android:id="@+id/group_ek2"
                            android:layout_marginTop="0dp"
                            android:layout_marginStart="0dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >

                            <View   android:id="@+id/_bg__group_ek3"
                                android:background="@drawable/_bg__group_ek3_shape"
                                android:layout_marginStart="-125dp"
                                android:layout_marginTop="-10dp"
                                android:layout_width="34.15dp"
                                android:layout_height="30dp" />

                            <ImageView android:id="@+id/vector_ek3"
                                android:src="@drawable/vector_ek3"
                                android:contentDescription="vector_ek3"
                                android:layout_marginStart="-2dp"
                                android:layout_marginTop="9dp"
                                android:layout_width="36.15dp"
                                android:layout_height="21.49dp" />

                            <ImageView android:id="@+id/vector_ek4"
                                android:src="@drawable/vector_ek4"
                                android:contentDescription="vector_ek4"
                                android:layout_marginStart="7dp"
                                android:layout_marginTop="-2dp"
                                android:layout_width="17.36dp"
                                android:layout_height="12.11dp" />

                        </RelativeLayout>

                    </RelativeLayout>


                    <RelativeLayout android:id="@+id/____icon__star_outline_"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="236.45dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <View   android:id="@+id/_bg______icon__star_outline__ek1"
                            android:background="@drawable/_bg______icon__star_outline__ek1_shape"
                            android:layout_marginStart="-236dp"
                            android:layout_marginTop="-10dp"
                            android:layout_width="32.31dp"
                            android:layout_height="30dp" />

                        <ImageView android:id="@+id/vector_ek5"
                            android:src="@drawable/vector_ek5"
                            android:contentDescription="vector_ek5"
                            android:layout_marginStart="-2dp"
                            android:layout_marginTop="-2dp"
                            android:layout_width="34.31dp"
                            android:layout_height="32dp" />

                    </RelativeLayout>


                    <RelativeLayout android:id="@+id/____icon__person_outline_"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="345.76dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >

                        <View   android:id="@+id/_bg______icon__person_outline__ek1"
                            android:background="@drawable/_bg______icon__person_outline__ek1_shape"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="0dp"
                            android:layout_width="27.69dp"
                            android:layout_height="30dp" />


                        <RelativeLayout android:id="@+id/group_ek4"
                            android:layout_marginTop="0dp"
                            android:layout_marginStart="0dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            >

                            <View   android:id="@+id/_bg__group_ek5"
                                android:background="@drawable/_bg__group_ek5_shape"
                                android:layout_marginStart="0dp"
                                android:layout_marginTop="0dp"
                                android:layout_width="27.69dp"
                                android:layout_height="30dp" />

                            <ImageView android:id="@+id/vector_ek6"
                                android:src="@drawable/vector_ek6"
                                android:contentDescription="vector_ek6"
                                android:layout_marginStart="5dp"
                                android:layout_marginTop="-2dp"
                                android:layout_width="14.73dp"
                                android:layout_height="15.85dp" />

                            <ImageView android:id="@+id/vector_ek7"
                                android:src="@drawable/vector_ek7"
                                android:contentDescription="vector_ek7"
                                android:layout_marginStart="-2dp"
                                android:layout_marginTop="16dp"
                                android:layout_width="29.69dp"
                                android:layout_height="13.54dp" />

                        </RelativeLayout>

                    </RelativeLayout>

                </RelativeLayout>


                <RelativeLayout android:id="@+id/component_1"
                    android:layout_marginTop="724dp"
                    android:layout_marginStart="193dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/_bg__component_1_ek1"
                        android:background="@drawable/_bg__component_1_ek1_shape"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_width="182dp"
                        android:layout_height="38dp" />

                    <TextView android:id="@+id/primary"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal|center"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:textColor="@color/_bg__iphone_14___1_ek2_color"
                        android:layout_marginLeft="33.5dp"
                        android:layout_marginTop="8dp"
                        android:layout_width="116dp"
                        android:layout_height="27.8dp"
                        android:text="@string/primary_string"
                        />

                </RelativeLayout>

                <TextView android:id="@+id/price__124124124__"
                    android:textSize="18sp"
                    android:textColor="@color/_bg__frame_1595_ek1_color"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="721dp"
                    android:layout_width="128.8dp"
                    android:layout_height="49.8dp"
                    android:text="@string/price__124124124___string"
                    />

                <TextView android:id="@+id/apple_iphone_14_pro_max_256_gb_ek1"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@color/_bg__iphone_14___1_ek2_color"
                    android:layout_marginLeft="77dp"
                    android:layout_marginTop="14dp"
                    android:layout_width="253.8dp"
                    android:layout_height="27.8dp"
                    android:text="@string/apple_iphone_14_pro_max_256_gb_ek1_string"
                    />


                <RelativeLayout android:id="@+id/____icon__arrow_back_"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="18dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    >

                    <View   android:id="@+id/_bg______icon__arrow_back__ek1"
                        android:background="@drawable/_bg______icon__arrow_back__ek1_shape"
                        android:layout_marginStart="-18dp"
                        android:layout_marginTop="-15dp"
                        android:layout_width="21.67dp"
                        android:layout_height="20dp" />


                    <RelativeLayout android:id="@+id/group_ek6"
                        android:layout_marginTop="0dp"
                        android:layout_marginStart="0dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <View   android:id="@+id/_bg__group_ek7"
                            android:background="@drawable/_bg__group_ek7_shape"
                            android:layout_marginStart="-18dp"
                            android:layout_marginTop="-15dp"
                            android:layout_width="21.67dp"
                            android:layout_height="20dp" />

                        <ImageView android:id="@+id/vector_ek8"
                            android:src="@drawable/vector_ek8"
                            android:contentDescription="vector_ek8"
                            android:layout_marginStart="-3dp"
                            android:layout_marginTop="-3dp"
                            android:layout_width="13dp"
                            android:layout_height="23dp" />

                        <ImageView android:id="@+id/vector_ek9"
                            android:src="@drawable/vector_ek9"
                            android:contentDescription="vector_ek9"
                            android:layout_marginStart="-2dp"
                            android:layout_marginTop="7dp"
                            android:layout_width="23.28dp"
                            android:layout_height="3dp" />

                    </RelativeLayout>

                </RelativeLayout>

            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>
</HorizontalScrollView>